--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/auth": "^4.2.0",
     "@fastify/autoload": "^5.0.0",
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/cors": "^8.2.1",
     "@fastify/sensible": "^4.1.0",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "fastify": "^4.0.0",
     "fastify-cli": "^4.3.0",
     "fastify-plugin": "^3.0.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3"
