--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "tap \"test/**/*.test.js\"",
-    "start": "fastify start -l info app.js",
+    "start": "node server.js",
     "dev": "fastify start -w -l info -P app.js"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "@fastify/helmet": "^10.1.0",
     "@fastify/sensible": "^4.1.0",
     "bcryptjs": "^2.4.3",
+    "close-with-grace": "^1.2.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "fastify": "^4.0.0",
