--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "fastify": "^4.0.0",
-    "fastify-cli": "^4.3.0",
     "fastify-plugin": "^3.0.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
-    "tap": "^16.1.0"
+    "tap": "^16.1.0",
+    "fastify-cli": "^4.3.0"
   }
 }
