--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@fastify/sensible": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "close-with-grace": "^1.2.0",
-    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "fastify": "^4.0.0",
     "fastify-plugin": "^3.0.0",
@@ -33,7 +32,7 @@
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
-    "tap": "^16.1.0",
-    "fastify-cli": "^4.3.0"
+    "fastify-cli": "^4.3.0",
+    "tap": "^16.1.0"
   }
 }
