--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.1",
     "fastify": "^4.0.0",
     "fastify-plugin": "^3.0.0",
+    "fluent-json-schema": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
     "sequelize": "^6.21.3"
