--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "fluent-json-schema": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
